feat: add more flags

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/ft_ls",
-      "args": [],
+      "args": ["-Qm", "./lib/libft/build"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
@@ -26,7 +26,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "/home/cobli/Documentos/pessoal/42sp-ft-ls/ft_ls",
-      "args": ["-f"],
+      "args": ["-Qm", "./lib/libft/build"],
       "stopAtEntry": false,
       "cwd": "/home/cobli/Documentos/pessoal/42sp-ft-ls",
       "externalConsole": false,
